--- a/app/sass/components/_header.sass
+++ b/app/sass/components/_header.sass
@@ -22,5 +22,7 @@
 	text-align: right
 .nav-link
 	color: #635c73;
-.navbar-collapse
-	+flex-align(center)
+.navbar
+	&-collapse
+		+flex-align(start)
+		padding-right: 10px
