--- a/app/sass/utils/_global.sass
+++ b/app/sass/utils/_global.sass
@@ -9,10 +9,12 @@ li
 	list-style: none
 .container
 	border: 2px solid red
-//.adaptive
-//	width: 100%
-//	height: auto
+	//overflow: hidden
+.adaptive
+	width: 100%
+	height: auto
 .title
+	margin-top: 60px
 	font-size: $title-font-size;
 	font-weight: 900;//700
 	text-align: center
