--- a/app/sass/components/_people-talking-page.sass
+++ b/app/sass/components/_people-talking-page.sass
@@ -1,9 +1,10 @@
 @import 'utils/_global.sass'
 @import 'utils/_mixins.sass'
 @import 'utils/_variabels.sass'
+
 .people-talking
-	background: url(../../img/7/background/people-talking.png) no-repeat
-	background-style: cover
+	background: url('../img/7/background/3-layers.png'), no-repeat
+	background-size: cover
 	&-title
 		color: #ffffff
 	&-list
@@ -16,6 +17,8 @@
 			text-align: center
 			font-style: italic
 			color: #ffffff;
+
+
 .pricing
 	border-top: 1px solid
 	&-title
@@ -23,11 +26,12 @@
 		margin-bottom: 45px
 		color: #ffffff
 	&-list-element
+		width: 100%
 		margin-top: 10px
 		padding: 0
 		margin-bottom: 15px
 		&-name
-			font-size: 25px
+			font-size: 1.5em
 			font-weight: 700
 			color: #fff;
 			opacity: 1;
@@ -68,3 +72,9 @@
 		margin-bottom: 40px
 		opacity: 0.8;
 		color: #b5acb5;
+.slider
+	&-img
+		margin-right: 10px
+	&-text
+		margin-top: 45px
+		text-align: center
